// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`monorepo: no package.json 1`] = `
Array [
  "git config --replace-all remote.origin.fetch +refs/heads/*:refs/remotes/origin/*",
  "git fetch",
  "git stash",
  "git checkout master",
  "git log --oneline origin/greenkeeper/my-dependency-1.0.0...master | grep 'chore(package): update lockfile'",
  "git checkout -",
]
`;

exports[`monorepo: no root and one sub package 1`] = `
Array [
  "git config --replace-all remote.origin.fetch +refs/heads/*:refs/remotes/origin/*",
  "git fetch",
  "git stash",
  "git checkout master",
  "git log --oneline origin/greenkeeper/my-dependency-1.0.0...master | grep 'chore(package): update lockfile'",
  "git checkout -",
  "git status --porcelain",
  "git add ./**/npm-shrinkwrap.json 2>/dev/null || true",
  "git add ./**/package-lock.json 2>/dev/null || true",
  "git add ./**/yarn.lock 2>/dev/null || true",
  "git config user.email \\"support@greenkeeper.io\\"",
  "git config user.name \\"greenkeeperio-bot\\"",
  "git status --porcelain",
  "git commit -m \\"chore(package): update lockfile

https://npm.im/greenkeeper-lockfile\\"",
  "git remote add gk-origin git@github.com:undefined || git remote set-url gk-origin git@github.com:undefined",
  "git push gk-origin HEAD:greenkeeper/my-dependency-1.0.0",
]
`;

exports[`monorepo: no root and two sub package 1`] = `
Array [
  "git config --replace-all remote.origin.fetch +refs/heads/*:refs/remotes/origin/*",
  "git fetch",
  "git stash",
  "git checkout master",
  "git log --oneline origin/greenkeeper/my-dependency-1.0.0...master | grep 'chore(package): update lockfile'",
  "git checkout -",
  "git status --porcelain",
  "git add ./**/npm-shrinkwrap.json 2>/dev/null || true",
  "git add ./**/package-lock.json 2>/dev/null || true",
  "git add ./**/yarn.lock 2>/dev/null || true",
  "git config user.email \\"support@greenkeeper.io\\"",
  "git config user.name \\"greenkeeperio-bot\\"",
  "git status --porcelain",
  "git commit -m \\"chore(package): update lockfile

https://npm.im/greenkeeper-lockfile\\"",
  "git remote add gk-origin git@github.com:undefined || git remote set-url gk-origin git@github.com:undefined",
  "git push gk-origin HEAD:greenkeeper/my-dependency-1.0.0",
]
`;

exports[`monorepo: no root and two sub package at different levels 1`] = `
Array [
  "git config --replace-all remote.origin.fetch +refs/heads/*:refs/remotes/origin/*",
  "git fetch",
  "git stash",
  "git checkout master",
  "git log --oneline origin/greenkeeper/my-dependency-1.0.0...master | grep 'chore(package): update lockfile'",
  "git checkout -",
  "git status --porcelain",
  "git add ./**/npm-shrinkwrap.json 2>/dev/null || true",
  "git add ./**/package-lock.json 2>/dev/null || true",
  "git add ./**/yarn.lock 2>/dev/null || true",
  "git config user.email \\"support@greenkeeper.io\\"",
  "git config user.name \\"greenkeeperio-bot\\"",
  "git status --porcelain",
  "git commit -m \\"chore(package): update lockfile

https://npm.im/greenkeeper-lockfile\\"",
  "git remote add gk-origin git@github.com:undefined || git remote set-url gk-origin git@github.com:undefined",
  "git push gk-origin HEAD:greenkeeper/my-dependency-1.0.0",
]
`;

exports[`monorepo: root and one sub package 1`] = `
Array [
  "git config --replace-all remote.origin.fetch +refs/heads/*:refs/remotes/origin/*",
  "git fetch",
  "git stash",
  "git checkout master",
  "git log --oneline origin/greenkeeper/my-dependency-1.0.0...master | grep 'chore(package): update lockfile'",
  "git checkout -",
  "git status --porcelain",
  "git add ./**/npm-shrinkwrap.json 2>/dev/null || true",
  "git add ./**/package-lock.json 2>/dev/null || true",
  "git add ./**/yarn.lock 2>/dev/null || true",
  "git config user.email \\"support@greenkeeper.io\\"",
  "git config user.name \\"greenkeeperio-bot\\"",
  "git status --porcelain",
  "git commit -m \\"chore(package): update lockfile

https://npm.im/greenkeeper-lockfile\\"",
  "git remote add gk-origin git@github.com:undefined || git remote set-url gk-origin git@github.com:undefined",
  "git push gk-origin HEAD:greenkeeper/my-dependency-1.0.0",
]
`;

exports[`monorepo: root and two sub package 1`] = `
Array [
  "git config --replace-all remote.origin.fetch +refs/heads/*:refs/remotes/origin/*",
  "git fetch",
  "git stash",
  "git checkout master",
  "git log --oneline origin/greenkeeper/my-dependency-1.0.0...master | grep 'chore(package): update lockfile'",
  "git checkout -",
  "git status --porcelain",
  "git add ./**/npm-shrinkwrap.json 2>/dev/null || true",
  "git add ./**/package-lock.json 2>/dev/null || true",
  "git add ./**/yarn.lock 2>/dev/null || true",
  "git config user.email \\"support@greenkeeper.io\\"",
  "git config user.name \\"greenkeeperio-bot\\"",
  "git status --porcelain",
  "git commit -m \\"chore(package): update lockfile

https://npm.im/greenkeeper-lockfile\\"",
  "git remote add gk-origin git@github.com:undefined || git remote set-url gk-origin git@github.com:undefined",
  "git push gk-origin HEAD:greenkeeper/my-dependency-1.0.0",
]
`;

exports[`monorepo: root and two sub package at different levels 1`] = `
Array [
  "git config --replace-all remote.origin.fetch +refs/heads/*:refs/remotes/origin/*",
  "git fetch",
  "git stash",
  "git checkout master",
  "git log --oneline origin/greenkeeper/my-dependency-1.0.0...master | grep 'chore(package): update lockfile'",
  "git checkout -",
  "git status --porcelain",
  "git add ./**/npm-shrinkwrap.json 2>/dev/null || true",
  "git add ./**/package-lock.json 2>/dev/null || true",
  "git add ./**/yarn.lock 2>/dev/null || true",
  "git config user.email \\"support@greenkeeper.io\\"",
  "git config user.name \\"greenkeeperio-bot\\"",
  "git status --porcelain",
  "git commit -m \\"chore(package): update lockfile

https://npm.im/greenkeeper-lockfile\\"",
  "git remote add gk-origin git@github.com:undefined || git remote set-url gk-origin git@github.com:undefined",
  "git push gk-origin HEAD:greenkeeper/my-dependency-1.0.0",
]
`;

exports[`monorepo: root package 1`] = `
Array [
  "git config --replace-all remote.origin.fetch +refs/heads/*:refs/remotes/origin/*",
  "git fetch",
  "git stash",
  "git checkout master",
  "git log --oneline origin/greenkeeper/my-dependency-1.0.0...master | grep 'chore(package): update lockfile'",
  "git checkout -",
  "git status --porcelain",
  "git add ./**/npm-shrinkwrap.json 2>/dev/null || true",
  "git add ./**/package-lock.json 2>/dev/null || true",
  "git add ./**/yarn.lock 2>/dev/null || true",
  "git config user.email \\"support@greenkeeper.io\\"",
  "git config user.name \\"greenkeeperio-bot\\"",
  "git status --porcelain",
  "git commit -m \\"chore(package): update lockfile

https://npm.im/greenkeeper-lockfile\\"",
  "git remote add gk-origin git@github.com:undefined || git remote set-url gk-origin git@github.com:undefined",
  "git push gk-origin HEAD:greenkeeper/my-dependency-1.0.0",
]
`;
